--- a/com.garage.web.api/src/main/resources/application.properties
+++ b/com.garage.web.api/src/main/resources/application.properties
@@ -19,15 +19,15 @@ spring.thymeleaf.cache=false
 # ===============================
 # DATABASE
 # ===============================
-#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-#spring.datasource.url=jdbc:mysql://127.0.0.1:3306/product
-#spring.datasource.username=DB_A54FD3_khanhlv001_admin
-#spring.datasource.password=khanhlv001
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://45.32.100.93:3306/garage_system?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=garage_system
+spring.datasource.password=fpLMDip5H1s@
 
 # ===============================
 # JOOQ
 # ===============================
-#spring.jooq.sql-dialect=MYSQL
+spring.jooq.sql-dialect=MYSQL
 
 # ===============================
 # JPA / HIBERNATE
