--- a/com.garage.web.api/pom.xml
+++ b/com.garage.web.api/pom.xml
@@ -17,6 +17,16 @@
             <artifactId>com.garage.common</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>com.garage</groupId>
+            <artifactId>com.garage.model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.garage</groupId>
+            <artifactId>com.garage.service</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
