--- a/com.garage.web.api/src/main/resources/application.properties
+++ b/com.garage.web.api/src/main/resources/application.properties
@@ -1,6 +1,7 @@
 logging.level.org.springframework=DEBUG
 logging.level.com.garage=DEBUG
-#logging.level.com.zaxxer=DEBUG
+logging.level.com.zaxxer=DEBUG
+logging.level.org.hibernate.type=trace
 #logging.level.org.hibernate.stat=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.root=ERROR
@@ -20,28 +21,28 @@ spring.thymeleaf.cache=false
 # DATABASE
 # ===============================
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://45.32.100.93:3306/garage_system?useUnicode=yes&characterEncoding=UTF-8
-spring.datasource.username=garage_system
-spring.datasource.password=fpLMDip5H1s@
-
-# ===============================
-# JOOQ
-# ===============================
-spring.jooq.sql-dialect=MYSQL
+spring.datasource.url=jdbc:mysql://localhost:3306/garage_system?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=#
+spring.datasource.password=#
+spring.datasource.platform=mysql
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
-#spring.jpa.properties.hibernate.generate_statistics=true
-#spring.jpa.properties.hibernate.format_sql=true
-#
-#spring.datasource.hikari.connectionTimeout=20000
-#spring.datasource.hikari.maximumPoolSize=5
-#spring.datasource.hikari.poolName=HikariPoolZZZ
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# HIKARI
+# ===============================
+
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.poolName=HikariPoolZZZ
 
 # ===============================
 # SPRING
