--- a/com.garage.web.backend/pom.xml
+++ b/com.garage.web.backend/pom.xml
@@ -11,11 +11,20 @@
 
     <artifactId>com.garage.web.backend</artifactId>
 
-
     <dependencies>
         <dependency>
             <groupId>com.garage</groupId>
             <artifactId>com.garage.common</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.garage</groupId>
+            <artifactId>com.garage.model</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>com.garage</groupId>
+            <artifactId>com.garage.service</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
