--- a/com.garage.web.backend/src/main/resources/application.properties
+++ b/com.garage.web.backend/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 logging.level.org.springframework=DEBUG
 logging.level.com.learning=INFO
-#logging.level.com.zaxxer=DEBUG
+logging.level.com.zaxxer=DEBUG
 #logging.level.org.hibernate.stat=DEBUG
 #logging.level.org.hibernate.type.descriptor.sql=TRACE
 logging.level.root=ERROR
-logging.file=learning-logger.log
+logging.file=backend-logger.log
 logging.file.max-history=20
 logging.file.max-size=10MB
 
@@ -20,24 +20,29 @@ spring.thymeleaf.cache=false
 # DATABASE
 # ===============================
 
-#spring.datasource.driver-class-name=com.microsoft.sqlserver.jdbc.SQLServerDriver
-#spring.datasource.url=jdbc:sqlserver://sql5045.site4now.net;databaseName=DB_A54FD3_khanhlv001
-#spring.datasource.username=DB_A54FD3_khanhlv001_admin
-#spring.datasource.password=khanhlv001
-#
-#spring.datasource.hikari.connectionTimeout=20000
-#spring.datasource.hikari.maximumPoolSize=5
-#spring.datasource.hikari.poolName=HikariPoolZZZ
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.url=jdbc:mysql://localhost:3306/garage_system?useUnicode=yes&characterEncoding=UTF-8
+spring.datasource.username=#
+spring.datasource.password=#@
+spring.datasource.platform=mysql
 
 # ===============================
 # JPA / HIBERNATE
 # ===============================
 
-#spring.jpa.show-sql=true
-#spring.jpa.hibernate.ddl-auto=none
-#spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServer2012Dialect
-#spring.jpa.properties.hibernate.generate_statistics=true
-#spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=none
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.properties.hibernate.generate_statistics=true
+spring.jpa.properties.hibernate.format_sql=true
+
+# ===============================
+# HIKARI
+# ===============================
+
+spring.datasource.hikari.connectionTimeout=20000
+spring.datasource.hikari.maximumPoolSize=5
+spring.datasource.hikari.poolName=HikariPoolZZZ
 
 
 # ===============================
@@ -77,8 +82,3 @@ server.compression.min-response-size=4096
 #server.ssl.key-store-type=keystore_type
 #server.ssl.key-store=keystore-path
 #server.ssl.key-alias=tomcat
-
-# ===============================
-# VARIABLE APP
-# ===============================
-jwt.secret={bcrypt}$donald
